<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />‼
        <item
            android:id="@+id/nav_buscar"
            android:title="@string/menu_buscarDl" />
        <item
            android:id="@+id/nav_sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_my"
            android:title="@string/menu_myDl" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/menu_sair" />
    </group>
</menu>
