<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".tela10"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".tela10">

            <include
                android:id="@+id/includeToolbar"
                layout="@layout/header" />

            <TextView
                android:id="@+id/txtAcompanhamentos"
                android:layout_width="275dp"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="70dp"
                android:text="@string/txt_acompanhamento"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/includeToolbar" />

            <TextView
                android:id="@+id/txtDescricaoEnviarProposta"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="55dp"
                android:text="@string/txtTela7"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAcompanhamentos" />

            <TextView
                android:id="@+id/txtAdvogadoEscolhido"
                android:layout_width="120dp"
                android:layout_height="16dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="36dp"
                android:text="@string/txt_advogado_escolhido"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescricaoEnviarProposta" />

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="68dp"
                android:src="@drawable/user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAdvogadoEscolhido" />

            <TextView
                android:id="@+id/txtNomeAdvogado"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/nome_advogado"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/imgUser"
                app:layout_constraintTop_toBottomOf="@+id/txtAdvogadoEscolhido" />

            <TextView
                android:id="@+id/txtJohnDoe"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/distancia"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/imgUser"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeAdvogado" />

            <TextView
                android:id="@+id/txtPremium1"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="5dp"
                android:text="@string/txt_premium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser" />

            <Button
                android:id="@+id/btnPagarCartao"
                android:layout_width="364dp"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@android:color/darker_gray"
                android:text="@string/txt_btn_pagar_cartao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPremium1" />

            <Button
                android:id="@+id/btnEscolherCartao"
                android:layout_width="360dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:text="@string/txt_btn_escolher_cartao"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPagarCartao" />

            <TextView
                android:id="@+id/txtValorDiligencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="134dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_valor_diligencia"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEscolherCartao" />

            <ImageView
                android:id="@+id/imgCartao"
                android:layout_width="77dp"
                android:layout_height="53dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValorDiligencia"
                app:srcCompat="@drawable/visa" />

            <TextView
                android:id="@+id/txtNumeroCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_numero_card"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="false"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCartao" />

            <EditText
                android:id="@+id/etNumCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/txt_ex_num_card"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeroCartao" />

            <TextView
                android:id="@+id/txtDataValidade"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_data_validade"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNumCard" />

            <EditText
                android:id="@+id/etDataValidade"
                android:layout_width="120dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="date"
                android:text="@string/txt_ex_data_validade"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDataValidade" />

            <TextView
                android:id="@+id/txtCVV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_cvv"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/txtDataValidade"
                app:layout_constraintTop_toBottomOf="@+id/etNumCard" />

            <EditText
                android:id="@+id/etCVV"
                android:layout_width="53dp"
                android:layout_height="49dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/txt_ex_cvv"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/etDataValidade"
                app:layout_constraintTop_toBottomOf="@+id/txtCVV" />

            <TextView
                android:id="@+id/txtNomeCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_nome_no_cartao"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDataValidade" />

            <EditText
                android:id="@+id/etNomeCartao"
                android:layout_width="213dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txt_john_doe"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeCartao" />

            <CheckBox
                android:id="@+id/checkBoxSalvarCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_salvar_card"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNomeCartao" />

            <Button
                android:id="@+id/btnPagueAgora"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="26dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:text="@string/txt_btn_pague_agora"
                android:textAllCaps="false"
                android:textColor="@color/branco"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxSalvarCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:headerLayout="@layout/nav_header_menu"
        app:itemTextAppearance="@style/NavigationItemAppearance"
        app:menu="@menu/activity_menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>