<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".cadastrar">

    <ImageView
        android:id="@+id/LogoDiligência"
        android:layout_width="290dp"
        android:layout_height="150dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodiligencia" />

    <TextView
        android:id="@+id/txtCadastre-se"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:text="@string/txt_cadastre_se"
        android:textAllCaps="true"
        android:textColor="@color/branco"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoDiligência" />

    <EditText
        android:id="@+id/criarUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/campoNome"
        android:inputType="textPersonName"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastre-se" />

    <EditText
        android:id="@+id/criarEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/campoEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarUser" />

    <EditText
        android:id="@+id/criarSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/campoSenha"
        android:inputType="textPassword"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarEmail" />

    <EditText
        android:id="@+id/confirmarSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/campo_confirme_a_senha"
        android:inputType="textPassword"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarSenha" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="145dp"
        android:background="@drawable/formato_botao"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarSenha" />



</androidx.constraintlayout.widget.ConstraintLayout>